--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.49.9",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
